--- a/package.json
+++ b/package.json
@@ -2,16 +2,28 @@
   "name": "camstreamerlib",
   "version": "1.5.0",
   "description": "Helper library for CamStreamer ACAP applications.",
+  "prettier": "@camstreamer/prettier-config",
   "main": "CameraVapix.js",
   "dependencies": {
     "crypto": "^1.0.1",
     "eventemitter2": "^5.0.1",
     "prettify-xml": "^1.2.0",
+    "typescript": "^4.7.4",
     "ws": "^7.4.2",
     "xml2js": "^0.4.19"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@camstreamer/prettier-config": "^2.0.4",
+    "@types/node": "^18.0.6",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
+    "rimraf": "^3.0.2"},
   "scripts": {
+    "clean": "rimraf dist/*",
+    "build": "npm-run-all clean tsc",
+    "tsc": "tsc",
+    "pretty": "prettier --write \"./src/*.{ts,tsx}\"",
+    "pretty:check": "prettier --check \"./src/*.{ts,tsx}\"",
     "test": "echo \"Error: no test specified\""
   },
   "repository": {
