--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "camstreamerlib",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "Helper library for CamStreamer ACAP applications.",
   "prettier": "@camstreamer/prettier-config",
   "main": "CameraVapix.js",
@@ -15,16 +15,18 @@
   "devDependencies": {
     "@camstreamer/prettier-config": "^2.0.4",
     "@types/node": "^18.0.6",
+    "jest": "^28.1.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
-    "rimraf": "^3.0.2"},
+    "rimraf": "^3.0.2"
+  },
   "scripts": {
     "clean": "rimraf dist/*",
     "build": "npm-run-all clean tsc",
     "tsc": "tsc",
     "pretty": "prettier --write \"./src/*.{ts,tsx}\"",
     "pretty:check": "prettier --check \"./src/*.{ts,tsx}\"",
-    "test": "echo \"Error: no test specified\""
+    "test": "jest"
   },
   "repository": {
     "type": "git",
