--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   },
   "devDependencies": {
     "@camstreamer/prettier-config": "^2.0.4",
+    "@types/jest": "^28.0.0",
     "@types/node": "^18.0.6",
+    "ts-jest": "^28.0.0",
+    "ts-node": "^10.7.0",
     "jest": "^28.1.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
@@ -26,7 +29,7 @@
     "tsc": "tsc",
     "pretty": "prettier --write \"./src/*.{ts,tsx}\"",
     "pretty:check": "prettier --check \"./src/*.{ts,tsx}\"",
-    "test": "jest"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "repository": {
     "type": "git",
