--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "crypto": "^1.0.1",
     "eventemitter2": "^5.0.1",
     "prettify-xml": "^1.2.0",
+    "adm-zip": "^0.5.9",
     "typescript": "^4.7.4",
     "ws": "^7.4.2",
     "xml2js": "^0.4.19"
