--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "description": "Helper library for CamStreamer ACAP applications.",
   "prettier": "@camstreamer/prettier-config",
   "dependencies": {
+    "adm-zip": "^0.5.9",
     "crypto": "^1.0.1",
     "eventemitter2": "^5.0.1",
     "prettify-xml": "^1.2.0",
     "ws": "^7.4.2",
-    "xml2js": "^0.4.19",
-    "adm-zip": "^0.5.9"
+    "xml2js": "^0.5.0"
   },
   "devDependencies": {
     "@camstreamer/prettier-config": "^2.0.4",
     "@types/jest": "^28.0.0",
     "@types/node": "^18.0.6",
-    "typescript": "^4.7.4",
-    "ts-jest": "^28.0.0",
-    "ts-node": "^10.7.0",
     "jest": "^28.1.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "ts-jest": "^28.0.0",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "clean": "rimraf dist/*",
@@ -32,7 +32,10 @@
     "pretty:check": "prettier --check \"./src/*.{ts,tsx}\"",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
-  "files": ["*.js", "*.ts"],
+  "files": [
+    "*.js",
+    "*.ts"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/CamStreamer/CamStreamerLib.git"
