--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "build": "npm-run-all clean tsc copyPackage",
     "tsc": "tsc",
     "copyPackage": "cp -f LICENSE dist/ && cp -f README.md dist/ && cp -f package.json dist/",
-    "pretty": "prettier --write \"./src/*.{ts,tsx}\"",
-    "pretty:check": "prettier --check \"./src/*.{ts,tsx}\"",
+    "pretty": "prettier --write \"./{src,doc}/*.{ts,tsx,md}\"",
+    "pretty:check": "prettier --check \"./{src,doc}/*.{ts,tsx,md}\"",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "files": [
