--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
   },
   "devDependencies": {
     "@camstreamer/prettier-config": "^2.0.4",
+    "@eslint/js": "^9.5.0",
     "@types/jest": "^28.0.0",
     "@types/node": "^18.0.6",
+    "eslint": "^9.5.0",
+    "globals": "^15.6.0",
     "jest": "^28.1.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^28.0.0",
     "ts-node": "^10.7.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "typescript-eslint": "^7.14.1"
   },
   "scripts": {
     "clean": "rimraf dist/*",
