--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "adm-zip": "^0.5.9",
     "eventemitter2": "^5.0.1",
     "prettify-xml": "^1.2.0",
+    "undici": "6.13.0",
     "ws": "^7.4.2",
     "xml2js": "^0.5.0"
   },
