--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.0",
     "ts-node": "^10.7.0",
-    "typescript": "^5.2.2"
+    "typescript": "5.3.3"
   },
   "scripts": {
     "clean": "rimraf dist/*",
