--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "adm-zip": "^0.5.9",
     "eventemitter2": "^5.0.1",
     "prettify-xml": "^1.2.0",
+    "undici": "6.13.0",
     "ws": "^7.4.2",
     "xml2js": "^0.5.0"
   },
@@ -31,7 +32,7 @@
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.0",
     "ts-node": "^10.7.0",
-    "typescript": "^5.2.2"
+    "typescript": "5.3.3"
   },
   "scripts": {
     "clean": "rimraf dist/*",
