--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prettify-xml": "^1.2.0",
     "undici": "6.13.0",
     "ws": "^8.18.0",
-    "xml2js": "^0.5.0"
+    "xml2js": "^0.5.0",
+    "zod": "^3.24.3"
   },
   "engine": {
     "node": ">=18.0.0"
