--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dependencies": {
         "adm-zip": "^0.5.9",
         "eventemitter2": "^5.0.1",
+        "lodash": "^4.17.21",
         "prettify-xml": "^1.2.0",
+        "type-fest": "^4.41.0",
         "undici": "^6.21.3",
         "ws": "^8.18.0",
         "xml2js": "^0.5.0",
@@ -20,6 +22,7 @@
         "@camstreamer/prettier-config": "^2.0.4",
         "@types/adm-zip": "^0.5.5",
         "@types/jest": "^28.0.0",
+        "@types/lodash": "^4.17.18",
         "@types/node": "^18.19.39",
         "@types/ws": "^8.5.10",
         "@types/xml2js": "^0.4.14",
