--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,17 @@
 {
-  "compilerOptions": {
-    "target": "es6",
-    "lib": [ "ES2022" ],
-    "module": "commonjs",
-    "declaration": true,
-    "removeComments": true,
-    "outDir": "dist",
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "typeRoots": [
-      "typings",
-      "node_modules/@types"
-    ]
-  },
+    "compilerOptions": {
+        "moduleResolution": "node",
+        "target": "esnext",
+        "lib": ["ES2022"],
+        "module": "esnext",
+        "declaration": true,
+        "removeComments": true,
+        "outDir": "dist",
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
+        "strict": true,
+        "typeRoots": ["typings", "node_modules/@types"]
+    },
     "include": ["src"],
     "exclude": ["node_modules"]
 }
