--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "moduleResolution": "node",
         "target": "esnext",
-        "lib": ["ES2022"],
+        "lib": ["dom", "DOM.Iterable", "ES2022"],
         "module": "esnext",
         "declaration": true,
         "removeComments": true,
