--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "camstreamerlib",
-    "version": "3.5.1",
+    "version": "4.0.0-beta.1",
     "description": "Helper library for CamStreamer ACAP applications.",
     "prettier": "@camstreamer/prettier-config",
     "type": "module",
