--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
         "build": "npm-run-all clean build:cjs build:esm copyPackage",
         "build:cjs": "tsc --project tsconfig.cjs.json",
         "build:esm": "tsc --project tsconfig.esm.json",
-        "copyPackage": "cp -f LICENSE dist/ && cp -f README.md dist/ && cp -f package.json dist/",
+        "copyPackage": "cp -f LICENSE dist/ && cp -f package.json dist/",
+        "prepublish": "npm run build",
         "lint": "eslint \"src/**/*.ts\"",
         "lint:fix": "eslint \"src/**/*.ts\" --fix",
         "pretty": "prettier --write \"./{{src,doc}/**/*.{ts,tsx,md},README.md}\"",
