--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
-        "typeRoots": ["typings", "node_modules/@types"]
+        "typeRoots": ["typings", "node_modules/@types"],
+        "noUncheckedIndexedAccess": true
     },
     "include": ["src"],
     "exclude": ["node_modules"]
