--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "dependencies": {
         "adm-zip": "^0.5.9",
         "eventemitter2": "^5.0.1",
+        "fast-xml-parser": "^5.2.5",
         "lodash": "^4.17.21",
         "prettify-xml": "^1.2.0",
         "type-fest": "^4.41.0",
         "undici": "^6.21.3",
         "ws": "^8.18.0",
-        "xml2js": "^0.5.0",
         "zod": "^3.24.3"
     },
     "engine": {
@@ -25,7 +25,6 @@
         "@types/lodash": "^4.17.18",
         "@types/node": "^18.19.39",
         "@types/ws": "^8.5.10",
-        "@types/xml2js": "^0.4.14",
         "@typescript-eslint/eslint-plugin": "^6.8.0",
         "@typescript-eslint/parser": "^6.8.0",
         "eslint": "^8.51.0",
